tests/node_tests/process/process.js
/* @flow */

process.allowedNodeEnvironmentFlags as Set<string>;

process.allowedNodeEnvironmentFlags as string; // error
